Fix#4-increased test coverage